# adf-custom-board

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  export.sh  install.sh  sdkconfig  sdkconfig.old
components/custom_board/: CMakeLists.txt
main/: main.c
